# arithmos

./: Cargo.toml  LICENSE  README.md  README.rst
demo/arabic2greek/: Cargo.toml  README.rst  main.rs
rust/: Cargo.toml  README.md
rust/src/: lib.rs
src/: lib.rs
