[package]
name = "greek-numerals-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.87.0"
license = "GPL-3.0"
authors = ["Vincent Jorgensen [vincentjorgensen@tutanota.com"]
repository = "" # TODO
description = "A library for converting Arabic numerals into Greek numerals."
readme = "README.md"
keywords = ["ancient", "greek", "numerals", "arabic", "convert"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = { version = "4.0", features = ["derive"] }

[features]
default = ["std"]
std = []

#[[bin]]
#name = "greek-numerals-rs"
#path = "main.rs"
