[package]
name = "arithmos"
version = "0.1.1"
edition = "2024"
rust-version = "1.87.0"
license = "GPL-3.0"
authors = ["Vincent Jorgensen [vincent.jorgensen@gmail.com"]
homepage = "https://codeberg.org/utricularius"
repository = "https://codeberg.org/utricularius/arithmos"
description = "A library for converting Arabic numerals into Greek numerals"
readme = "README.md"
keywords = ["ancient", "greek", "numerals", "arabic", "convert"]

[dependencies]

[features]
default = ["std"]
std = []
