[package]
name = "arabic2greek"
version = "0.0.1"
edition = "2024"
rust-version = "1.87.0"
license = "GPL-3.0"
authors = ["Vincent Jorgensen [vincentjorgensen@tutanota.com"]
readme = "README.rst"
keywords = ["ancient", "greek", "numerals", "arabic", "convert"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
arithmos = { version = "0.1.1", path = "../../rust" }

[[bin]]
name = "arabic2greek"
path = "main.rs"
